test/invalid/Cars/CarListWrongOverride.plume
/**
 * O metodo isEmptyAAA nao esta declarado na classe CarList, como tal nao pode ser override.
 *
 * @author 37017, Joao Ramalho
 * @version $Id: CarListWrongOverride.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class CarListWrongOverride extends CarList is

  method override isEmptyAAA : () -> Boolean is
    true

  method override isEmpty : () -> Boolean is
    true
    
  method override length : () -> Integer is
    0
    
  method override getPrice : (index: Integer) -> Integer is
    error 
  
  method override getMaxSpeed : (index: Integer) -> Integer is
    error
    
  method override getBhp : (index: Integer) -> Integer is
    error

  method override getBrand : (index: Integer) -> String is
    error
    
  method override getModel : (index: Integer) -> String is
    error

  method override containsPrice : (elem: Integer) -> Boolean is
	false
	    
  method override containsMaxSpeed : (elem: Integer) -> Boolean is
    false
    
  method override containsBhp : (elem: Integer) -> Boolean is
    false
    
  method override toString : () -> String is
    "[]"
    